discussion/kv_engine/170277/170277_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50647: Remove ConnMap::pendingNotifications

A previous patch bypassed ConnMap pendingNotifications; frontend
threads are now directly notified.

As this makes pendingNotifications and ConnNotifier unnecessary, remove
both.

Change-Id: I1b773957472fc05000665b7099d62598bd8f99da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-02-09 12:59:58.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 13:11:25.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43714/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43714/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5088/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5088/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17476/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17167/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5146/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18215/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18215/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25574/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15440/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    std::mutex releaseLock;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15440/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16255/ : FAILURE

Compile error at [2022-02-09T13:03:09.299Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:1689:21:
error: use of undeclared identifier "cb_strerror"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16255/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14283/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
